Notification fallback work
+ Added a notification bar to handle notifications in case the API is not available or if the user does not want it

- Needs a little bit of refinement

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Ray Tracer</title>
+      <title>Tracer</title>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/main.css">
@@ -10,6 +10,11 @@
       <script src="js/main.js"></script>
    </head>
    <body>
+      <div id="notificationBar">
+         <h1>Notifications</h1>
+         <button id="clearNotifications"> Clear Notifications</button>
+         <section id="notificationSection"></section>
+      </div>
       <h1>Ray Tracer</h1>
       <fieldset>
          <legend>Create Ray</legend>
