Ray tracer now draws an image
+ Added viewport support so that an image is now generated for results

- Non-square canvases do not work yet

* Need to add support for exporting canvas

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -87,6 +87,10 @@
          </fieldset>
          <button id="sphere">Sphere</button>
       </fieldset>
+      <p id="renderSection">
+         <canvas id="traceCanvas" width="128" height="128">This should not be visible</canvas>
+         <button id="viewport">Viewport</button>
+      </p>
       <script>
          app.init();
          app.main();
