--- a/public_html/index.html
+++ b/public_html/index.html
@@ -87,6 +87,12 @@
          </fieldset>
          <button id="sphere">Sphere</button>
       </fieldset>
+      <fieldset>
+         <select id="shapes" size="5" multiple>
+         </select>
+         <button id="deleteShape">Delete Shape</button>
+         <button id="clearShapes">Clear Shapes</button>
+      </fieldset>
       <p id="renderSection">
          <canvas id="traceCanvas" width="128" height="128">This should not be visible</canvas>
          <button id="viewport">Viewport</button>
