--- a/public_html/index.html
+++ b/public_html/index.html
@@ -96,6 +96,7 @@
       <p id="renderSection">
          <canvas id="traceCanvas" width="128" height="128">This should not be visible</canvas>
          <button id="viewport">Viewport</button>
+         <button id="random">Random</button>
       </p>
       <script>
          app.init();
